--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./Style/bootstrap.css">
     <link rel="stylesheet" href="./Style/style.css">
 </head>
-<body style="background-image: url(./Images/world.png);">
+<body style="background-image: url(./Images/world3.jpg);">
        <nav class="navbar bg-dark navbar-dark navbar-expand-lg">
         <a href="./index.html" class="navbar-brand"><img src="" alt="Image Not Showing"> </a>
         <div class="ml-auto">
@@ -21,28 +21,31 @@
             </ul>
         </div>
        </nav>            
-       <div class="container">
+     <div class="container">
         <div class="row">
-            <div class="col-6" >
-                <form>
-                    <div class="contact_us">
-                    <h3>Contact Us</h3>
-                    <label >Username</label>
-                    <input type="text"><br><br>
-                    <label for="">Password</label>
-                    <input type="password"><br><br>
-                    <button class="button">Summit</button>
-                </div>
-                </form>
-                <!-- Form Example-->
-            </div>
             <div class="col-6">
-            <!-- put in the location--> 
-            
-            
+                <form class="form-group">
+                    <div class="container">
+                        <div class="row">
+                          <div class="col-4 mt-5">
+                            <input type="Name" class="form-control" placeholder="Name"/>
+                          </div>
+                          <div class="col-4 mt-5">
+                            <input type="Number" class="form-control" placeholder="Phone"/>
+                          </div>
+                          <div class="col-4 mt-5">
+                            <input type="Number" class="form-control" placeholder="Mobile"/>
+                          </div>
+                        </div>
+                    </div>
+            </div>
+        </form>
+                <div class="col-6">
+                    <div class="mt-5">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.036516474021!2d77.62891711482135!3d12.905373490899379!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1797b8313659%3A0xfe3e5c0e1c8c4f17!2sSt.Mary&#39;s%20church%20BOMMANAHALLI!5e0!3m2!1sen!2sin!4v1680508510036!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </div>
         </div>
-        </div>
-    </div>
+     </div>
   </body>
 </html>
