--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./Style/bootstrap.css">
     <link rel="stylesheet" href="./Style/style.css">
 </head>
-<body style="background-image: url(./Images/world.png);">
+<body style="background-image: url(./Images/world3.jpg);">
        <nav class="navbar bg-dark navbar-dark navbar-expand-lg">
         <a href="./index.html" class="navbar-brand"><img src="#" alt="Image Not Showing"> </a>
         <div class="ml-auto">
