--- a/services.html
+++ b/services.html
@@ -23,6 +23,17 @@
        </nav>            
        <div>
         <h3>Services</h3>
+        <div class="container mt-5 text-center">
+            <div class="row">
+                <div class="col-7">
+                    <ul class="list-group">
+                        <li class="list-group-item">Attendees Database</li>
+                        <li class="list-group-item">Industry Database</li>
+                        <li class="list-group-item">Technology Database</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
        </div>
 </body>
 </html>
